objects/IPM_Assessment__c.object
<CustomObject>
    <description>IPMG - Individual assessments related to Insurer Review Process</description>
    <fields>
        <fullName>IPM_Assessment_Complete__c</fullName>
        <formula>IF( IPM_PM_Reviewed__c = true &amp;&amp; (TEXT( SME_Approval__c ) = &quot;SME Not Required&quot; || TEXT( SME_Approval__c ) = &quot;Approved&quot; || TEXT( SME_Approval__c ) = &quot;Rejected&quot;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Assessment_Display__c</fullName>
        <description>Used to show on the Insurer Review process - Assessment related list</description>
        <formula>&quot;SME Approval - &quot; + TEXT(SME_Approval__c) +  BR() +
&quot;PM Review - &quot; +  If( IPM_PM_Reviewed__c=TRUE,&quot;Reviewed&quot;,&quot;Not Reviewed&quot;) +  BR() +
&quot;Assessment Complete - &quot; +  If(  IPM_Assessment_Complete__c =TRUE,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Assessment Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Date_of_SME_Decision__c</fullName>
        <label>Date of SME Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Insurer_Review_Process__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Insurer Review Process</label>
        <referenceTo>IPM_Insurer_Review_Process__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_PM_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_SME_Contact__c</fullName>
        <label>SME Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_SME_Group__c</fullName>
        <label>SME Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance Team</fullName>
                </value>
                <value>
                    <fullName>Data Team</fullName>
                </value>
                <value>
                    <fullName>External Consultancy</fullName>
                </value>
                <value>
                    <fullName>Finance Team</fullName>
                </value>
                <value>
                    <fullName>Insurer Performance Team - Compliance</fullName>
                </value>
                <value>
                    <fullName>Legal Team</fullName>
                </value>
                <value>
                    <fullName>SafeWork</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IPM_Assessment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SME_Approval__c</fullName>
        <label>SME Approval</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SME Not Required</fullName>
                    <default>true</default>
                    <label>SME Not Required</label>
                </value>
                <value>
                    <fullName>SME Required</fullName>
                </value>
                <value>
                    <fullName>Sent to SME</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_Insurer_Review_Process__c</columns>
        <columns>IPM_Type__c</columns>
        <columns>IPM_PM_Reviewed__c</columns>
        <columns>SME_Approval__c</columns>
        <columns>IPM_SME_Group__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Assessments</fullName>
        <columns>NAME</columns>
        <columns>IPM_Insurer_Review_Process__c</columns>
        <columns>IPM_Type__c</columns>
        <columns>IPM_PM_Reviewed__c</columns>
        <columns>SME_Approval__c</columns>
        <columns>IPM_SME_Group__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Assessments</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Assessments</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>IPM_Insurer_Review_Process__c</columns>
        <columns>IPM_Type__c</columns>
        <columns>IPM_PM_Reviewed__c</columns>
        <columns>SME_Approval__c</columns>
        <columns>IPM_SME_Group__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IPM_PM_Reviewed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SME_Approval__c</field>
            <operation>equals</operation>
            <value>SME Not Required,Approved,Rejected</value>
        </filters>
        <label>My Closed Assessments</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Assessments</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>IPM_Insurer_Review_Process__c</columns>
        <columns>IPM_Type__c</columns>
        <columns>IPM_PM_Reviewed__c</columns>
        <columns>SME_Approval__c</columns>
        <columns>IPM_SME_Group__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>IPM_PM_Reviewed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SME_Approval__c</field>
            <operation>equals</operation>
            <value>SME Required,Sent to SME</value>
        </filters>
        <label>My Open Assessments</label>
    </listViews>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Approve_and_Stop_Prevent_Changes</fullName>
        <active>true</active>
        <description>Once Insurer Review Process has moved to Approve or Stop, key changes should not be made to Assessment record</description>
        <errorConditionFormula>(TEXT(IPM_Insurer_Review_Process__r.IPM_Status__c) = &quot;Decide&quot; ||  TEXT(IPM_Insurer_Review_Process__r.IPM_Status__c) = &quot;Stop&quot;)
&amp;&amp;
(ISCHANGED( SME_Approval__c )
||
 ISCHANGED( IPM_PM_Reviewed__c ) )</errorConditionFormula>
        <errorMessage>Assessment information should not be changed once Insurer Review Process has proceeded to Approve or Stop</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IPM_Date_of_SME_Decision_Required</fullName>
        <active>true</active>
        <description>Date of SME decision required if SME Approved = Approved or Rejected</description>
        <errorConditionFormula>(TEXT(SME_Approval__c) = &quot;Approved&quot; || TEXT(SME_Approval__c) = &quot;Rejected&quot; ) &amp;&amp;
ISBLANK( IPM_Date_of_SME_Decision__c )</errorConditionFormula>
        <errorDisplayField>IPM_Date_of_SME_Decision__c</errorDisplayField>
        <errorMessage>Date of SME Decision required when SME Approval has been provided</errorMessage>
    </validationRules>
</CustomObject>